# TinyAuton

./: .$Dependencies.drawio.bkp  .gitignore  404.html  Dependencies.drawio  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  preview.sh  sitemap.xml  upload.sh  win-upload.bat
ADAPTATION/adaptation/: index.html
AI/ai/: index.html
ARCHITECTURE/architecture/: index.html
CODE-HOST/: README.txt
CODE-HOST/DNESP32S3-DEV/: sdkconfig
CODE-HOST/DNESP32S3-INIT/: CMakeLists.txt
CODE-HOST/DNESP32S3M-CORE-AI/: sdkconfig
CODE/AIoTNode-C-CORE/: sdkconfig.old
CODE/AIoTNode-C-CORE-CHN/: sdkconfig.old
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/: CMakeLists.txt
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/core/: tiny_graph_test.h  tiny_tensor.h
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/loss/: tiny_loss.c
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/model/: tiny_cnn.c  tiny_cnn.h
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/operator/: tiny_activations.h  tiny_convolution.c  tiny_fc.c  tiny_pool.h
CODE/AIoTNode-C-CORE-CHN/middleware/tiny_ai/train/: tiny_trainer.c
CODE/AIoTNode-CPP-CORE/: sdkconfig  sdkconfig.old
CODE/AIoTNode-CPP-CORE-CHN-AI-PROTO/middleware/tiny_ai/: CMakeLists.txt
CODE/AIoTNode-CPP-CORE-CHN-AI-PROTO/middleware/tiny_ai/mlp/: iris_mlp_weights.h  mlp_iris_demo.h
CODE/AIoTNode-TinyAuton/: sdkconfig  sdkconfig.old
CODE/AIoTNode-TinyAuton-AI/main/: CMakeLists.txt
CODE/AIoTNode-TinyAuton-DSP/: sdkconfig
CODE/AIoTNode-TinyAuton-Dev copy/: CMakeLists.txt
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/: CMakeLists.txt
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/core/: tiny_activation.hpp  tiny_loss.cpp  tiny_loss.hpp  tiny_optimizer.cpp  tiny_optimizer.hpp
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/example/: example_attention.cpp  example_cnn.cpp
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/example/data/: iris_data.hpp  signal_data.hpp
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/include/: tiny_ai.h
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/layers/: tiny_attention.cpp  tiny_conv.cpp  tiny_layer.cpp  tiny_layer.hpp  tiny_norm.hpp  tiny_pool.cpp
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/models/: tiny_cnn.hpp  tiny_mlp.cpp  tiny_sequential.hpp
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/quant/: tiny_fp8.cpp  tiny_quant.c  tiny_quant.h  tiny_quant_config.h
CODE/AIoTNode-TinyAuton-Dev/middleware/tiny_ai/train/: tiny_trainer.cpp
CODE/AIoTNode-TinyAuton/main/: AIoTNode.cpp  CMakeLists.txt
DEVKITS/devkits/: index.html
DOC/: mkdocs.yml
DOC/docs/: index.en.md  index.zh.md
DOC/site/: 404.html  feed_rss_created.xml  (+5 more)
blog/: index.html
search/: search_index.json
zh/: index.html
(+1458 files in other folders)
